--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
       "@context": ["./src/contexts"],
       "@typings": ["./src/typings.ts"],
       "@style": ["./src/style/index.css"],
-      "@hooks": ["./src/hooks"]
+      "@hooks": ["./src/hooks"],
+      "@utils": ["./src/utils/_index.ts"]
     },
 
     /* Bundler mode */
