--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "@typings": ["./src/typings.ts"],
       "@style": ["./src/style/index.css"],
       "@hooks": ["./src/hooks/index.ts"],
-      "@utils": ["./src/utils/_index.ts"]
+      "@utils": ["./src/utils/_index.ts"],
+      "@api": ["./src/api/_index.ts"]
     },
 
     /* Bundler mode */
