--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "@style": ["./src/style/index.css"],
       "@hooks": ["./src/hooks/index.ts"],
       "@utils": ["./src/utils/_index.ts"],
-      "@api": ["./src/api/_index.ts"]
+      "@api": ["./src/api/_index.ts"],
+      "@assets": ["./src/assets"]
     },
 
     /* Bundler mode */
