refactor: refatorando sistema, ajustes nas cores e adicionando enums

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@hooks": ["./src/hooks/index.ts"],
       "@utils": ["./src/utils/_index.ts"],
       "@api": ["./src/api/_index.ts"],
-      "@assets": ["./src/assets"]
+      "@assets": ["./src/assets"],
+      "@enums": ["./src/utils/enum"]
     },
 
     /* Bundler mode */
